# Voxploria

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
shaders/: voxel.frag  voxel.vert
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  Frustum.hpp  Lighting.cpp  Lighting.hpp  Math.hpp  Mesh.hpp  Noise.cpp  Noise.hpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Types.hpp  VulkanContext.cpp  VulkanContext.hpp  World.cpp  World.hpp  WorldGen.cpp  WorldGen.hpp  main.cpp
src/app/: main.cpp
src/engine/core/: AppHost.cpp  AppHost.hpp
src/engine/gfx/: Camera.cpp  Camera.hpp  Frustum.hpp  Mesh.hpp  VulkanContext.cpp  VulkanContext.hpp
src/engine/physics/: Physics.hpp
src/engine/render/: WorldRenderer.cpp  WorldRenderer.hpp
src/engine/world/: BlockDef.cpp  BlockDef.hpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  Lighting.cpp  Lighting.hpp  Noise.cpp  Noise.hpp  VoxelTypes.hpp  World.cpp  World.hpp  WorldGen.cpp  WorldGen.hpp
src/game/: Game.cpp  Game.hpp
